--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,26 +13,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
-            <FrameLayout
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:id="@+id/background_profile"
+                android:layout_height="150dp"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+            <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:id="@+id/frame1"
-                android:paddingTop="20dp"
                 android:paddingLeft="20dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 />
+            <android.support.design.widget.TabLayout
+                android:id="@+id/profile_tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/appBar"
+                app:tabSelectedTextColor="@color/twitter_logo_blue"
+                app:tabTextColor="@color/black"
+                app:tabMode="fixed" />
         </android.support.design.widget.AppBarLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <FrameLayout
-            android:id="@+id/frame2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
 
-            />
-        </LinearLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/profile_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
