--- a/app/src/main/res/layout/activity_tweet_detail.xml
+++ b/app/src/main/res/layout/activity_tweet_detail.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="15dp"
             android:textSize="15sp"
             android:textColor="@color/black"
+            android:textStyle="bold"
             android:layout_marginLeft="10dp"
             android:layout_below="@+id/appbar"
             android:layout_toRightOf="@+id/profile_image_detail" />
