--- a/app/src/main/res/layout/draft_list_item.xml
+++ b/app/src/main/res/layout/draft_list_item.xml
@@ -3,14 +3,14 @@
     <RelativeLayout
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_blue_light">
+        android:background="@android:color/white">
 
 
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:gravity="center"
-            android:src="@drawable/ic_delete"
+            android:src="@drawable/close_blue"
             android:layout_margin="5dp"
             android:id="@+id/draftClose"/>
 
@@ -20,12 +20,12 @@
             android:text="Drafts"
             android:textSize="20dp"
             android:gravity="center"
-            android:textColor="@color/black"
+            android:textColor="@color/twitter_logo_blue"
             android:id="@+id/DraftTitle"/>
         <ListView
             android:layout_width="match_parent"
             android:layout_marginTop="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/twitter_logo_blue"
             android:layout_below="@+id/DraftTitle"
             android:layout_height="wrap_content"
             android:id="@+id/draftList"
