--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -11,7 +11,7 @@
             android:minHeight="?attr/actionBarSize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:titleTextColor="@android:color/black"
+            app:titleTextColor="@android:color/white"
             android:background="?attr/colorPrimary">
            <!-- <TextView
                 android:id="@+id/toolbar_title"
